src/objects/SupplierContacts__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnterId__c</fullName>
        <formula>Manufacturer_Name__r.Enterprise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnterId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EnterpriseID</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>SupplierContacts (EnterpriseID)</relationshipLabel>
        <relationshipName>SupplierContacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Topic__c</fullName>
        <label>Topic</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCAR User Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MCAR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>SupplierContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Status__c</fullName>
        <formula>MCAR_User_Account__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCAR User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufact_Name__c</fullName>
        <formula>EnterpriseID__r.Enterprise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufacturerName__c</fullName>
        <formula>EnterpriseID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManufacturerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer Name</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>SupplierContacts</relationshipLabel>
        <relationshipName>SupplierContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBM_Country__c</fullName>
        <label>SBM Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SupplierManagerTitle__c</fullName>
        <formula>Manufacturer_Name__r.SupplierManagerTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SupplierManagerTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <label>Supplier ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Manager__c</fullName>
        <label>Supplier Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SupplierContact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier_Manager__c</columns>
        <columns>Email__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Supplier_ID__c</columns>
        <columns>MCAR_Topic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Enterprise ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SupplierContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>